# sendmail

./: .gitignore  pyproject.toml
notebooks/: psutil-test.ipynb  sendmail-test.ipynb
scripts/: sendmail.py  sendmail_cli.py
sendmail/: __init__.py  cli.py  util.py
tests/: __init__.py  conftest.py  test_sendmail.py
tests/data/sendmail/: email-data.csv  email-template.jinja2
